// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalFooter renders correctly with a "Previous" button 1`] = `
<div>
  <div
    className="signup-modal-footer"
  >
    <div
      className="footer-buttons"
    >
      <span
        className="previous-button"
        onClick={[MockFunction]}
      >
        Previous
      </span>
      <span
        className="continue-button"
        onClick={[MockFunction]}
      >
        continueText
      </span>
    </div>
  </div>
  <div
    className="press-enter"
  >
    or press Enter
  </div>
</div>
`;

exports[`ModalFooter renders correctly without a "Previous" button 1`] = `
<div>
  <div
    className="signup-modal-footer"
  >
    <div
      className="footer-buttons"
    >
      <span
        className="continue-button"
        onClick={[MockFunction]}
      >
        continueText
      </span>
    </div>
  </div>
  <div
    className="press-enter"
  >
    or press Enter
  </div>
</div>
`;
